--- a/src/pages/snippets/style.scss
+++ b/src/pages/snippets/style.scss
@@ -1,4 +1,9 @@
 .snippets {
+  iframe {
+    border: 0;
+    width: 100%;
+  }
+
   &__buttons {
     .button {
       font-size: 16px;
@@ -7,6 +12,7 @@
         margin-bottom: 15px;
       }
     }
+
     .icon {
       padding-right: 20px;
       color: #7f7d7d;
